# filesystems

./: .gitignore  CMakeLists.txt  README.md  clothes.md  clothesfs.cpp  clothesfs.hh  fat.cpp  fat.hh  fatmain.cpp  main.cpp
doc/: clothes.md
fs/: clothesfs.cpp  fat.cpp
inc/fs/: clothesfs.hh  fat.hh  filesystem.hh
module/: Makefile  README.md  clothesfs.c  clothesfs.h  misc.c  super.c
